main.css
:root {
	--background-color: #dddddd;
	--text-color: #000000;
	--text-size: 18px;
}

html {
	height: 100%;
	background-color: var(--background-color);
	color: var(--text-color);
	font-size: var(--text-size);
	font-family: 'Andale Mono', Courier, 'Courier New', monospace;
}

body {
	height: 100%;
	text-align: center;
	margin: 0px;
	overscroll-behavior: none;
}

.outer {
	display: table;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
}

.inner {
	display: table-cell;
	vertical-align: middle;
}

#tabs {
	display: flex;
	flex-flow: row wrap;
	border-top: 1px solid #000;
	border-bottom: 1px solid #000;
	margin-top: calc(var(--text-size) * 10 / 9);
}

.tab {
	font-size: calc(var(--text-size) * 2);
	margin-top: 0px;
}

.tab.notif {
	background-color: #ee3;
	border: 1px solid #881;
}

button {
	background-color: #eee;
	color: #000;
	font-size: inherit;
	font-family: inherit;
	border: 1px solid #888;
	border-radius: 5px;
	margin: calc(var(--text-size) * 10 / 9) auto 0px auto;
	transition-duration: 1s;
	cursor: pointer;
}

button:hover {
	background-color: #ccc;
	border: 1px solid #444;
}

button.upgrade.fade, button.improvement.fade, .tab.on {
	background-color: #999;
	border: 1px solid #222;
	cursor: default;
}

button.upgrade.maxed, button.improvement.maxed {
	background-color: #3e3;
	border: 1px solid #181;
	cursor: default;
}

button.improvement {
	border-radius: 10px;
	flex-basis: 100%;
}

input {
	font-size: inherit;
	font-family: inherit;
}

input.color {
	max-height: calc(var(--text-size) + 8px);
}

